[package]
name = "libnp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
prost = "0.12.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
simple-error = "0.3.0"
thiserror = "1.0.38"
url = "2.4.1"

[build-dependencies]
prost-build = "0.12.1"
