[package]
name = "localport-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.4", features = ["ws", "headers"]}
futures = "0.3.25"
tokio = {version = "1.24.2", features = ["macros", "rt-multi-thread"]}
tower-http = {version = "0.3.5", features = ["fs", "trace"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
