[package]
name = "localport-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liblocalport = { path = "../liblocalport" }
axum = { version = "0.6.4", features = ["ws", "headers"] }
futures = "0.3.25"
names = { version = "0.14.0", default-features = false }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
anyhow = "1.0.68"
thiserror = "1.0.38"
tower = "0.4.13"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
