[package]
name = "np"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libnp = { path = "../libnp" }
futures-util = "0.3.25"
tokio = { version = "1.24.2", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
tokio-tungstenite = "0.18.0"
thiserror = "1.0.38"
async-trait = "0.1.64"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
tracing = "0.1.37"
clap = { version = "4.3.0", features = ["derive"] }
hyper = { version = "0.14.24", features = ["client", "http1", "http2"] }
config = "0.13.3"
serde = "1.0.163"
