[package]
name = "np"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-tls"]
native-tls = ["dep:hyper-tls", "tokio-tungstenite/native-tls"]
rustls = ["dep:hyper-rustls", "tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
libnp = { path = "../libnp" }
futures-util = "0.3.25"
tokio = { version = "1.24.2", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
tokio-tungstenite = { version = "0.18.0", features = [] }
thiserror = "1.0.38"
async-trait = "0.1.64"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
tracing = "0.1.37"
clap = { version = "4.3.0", features = ["derive"] }
hyper = { version = "0.14.24", features = ["tcp", "client", "http1", "http2"] }
config = "0.13.3"
serde = "1.0.163"

hyper-tls = { version = "0.5.0", optional = true }
# Override rustls dependency to fix security vulnerability
rustls-webpki = { version = "0.101.4", optional = true }
hyper-rustls = { version = "0.24.1", optional = true, features = ["http2"] }
shadow-rs = "0.23.0"
prost = "0.12.1"

[build-dependencies]
shadow-rs = "0.23.0"
