[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
libnp = { path = "../libnp" }
np = { path = "../np" }
nport-server = { path = "../nport-server" }

[[test]]
name = "integration"
path = "integration.rs"

[dependencies]
env_logger = "0.10.0"
httptest = "0.15.4"
hyper = { version = "0.14.26", features = ["client"] }
tokio = { version = "1.28.2", features = ["macros"] }
tracing-subscriber = "0.3.17"
